2018-01-20  Bruno Haible  <bruno@clisp.org>

	clisp-link: Fix "ld: SONAME must not be empty string" warning.
	* clisp-link (add): Set 'dll' before invoking @createsharedlib@.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Mac OS X/x86_64.
	* Makefile.devel (multibuild-macosx-x86_64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Mac OS X/x86_64, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Mac OS X/PowerPC.
	* Makefile.devel (multibuild-macosx-powerpc): Enable all build variants
	that work or should work.
	* makemake.in (XCFLAGS): For Mac OS X/PowerPC, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Mac OS X/i386.
	* Makefile.devel (multibuild-macosx-i386): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Mac OS X/i386, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on OpenBSD/x86_64.
	* Makefile.devel (multibuild-openbsd-x86_64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For OpenBSD/x86_64, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on OpenBSD/i386.
	* Makefile.devel (multibuild-openbsd-i386): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For OpenBSD/i386, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on NetBSD/x86_64.
	* Makefile.devel (multibuild-netbsd-x86_64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For NetBSD/x86_64, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on NetBSD/i386.
	* Makefile.devel (multibuild-netbsd-i386): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For NetBSD/i386, enable all optimizations
	except ASM.
